# signal-forge-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Modules/BacktestingManager/: BacktestingManager.cpp  BacktestingManager.h  CMakeLists.txt
Modules/CommonTypes/: CMakeLists.txt  CommonTypes.cpp  CommonTypes.h
Modules/ConfigManager/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h
Modules/ContextManager/: CMakeLists.txt  ContextManager.cpp  ContextManager.h
Modules/Filters/: CMakeLists.txt  IPendingOrderFilter.h
Modules/MLModelTraining/: CMakeLists.txt  MLModelTraining.cpp  MLModelTraining.h
Modules/MLSignalGenerator/: CMakeLists.txt  MLSignalGenerator.cpp  MLSignalGenerator.h
Modules/MLTuningManager/: CMakeLists.txt  ITuningDataProcessor.h  MLTuningManager.cpp  MLTuningManager.h  MLTuningManagerServer.cpp  MLTuningManagerServer.h  Readme
Modules/OrderManager/: CMakeLists.txt  DefaultOrderManager.cpp  DefaultOrderManager.h  DefaultOrderProcessor.h  IOrderProcessor.h  OrderManager.h
Modules/ParameterManager/: CMakeLists.txt  ParameterDataAccess.cpp  ParameterDataAccess.h  ParameterDataAccessServer.cpp  ParameterDataAccessServer.h  ParameterManager.cpp  ParameterManager.h
Modules/RiskManager/: CMakeLists.txt  DefaultRiskManager.cpp  DefaultRiskManager.h  RiskManager.h
Modules/RiskManager/RiskProcessors/: ActiveOrderRiskProcessor.h  DefaultActiveOrderRiskProcessor.cpp  DefaultActiveOrderRiskProcessor.h  DefaultPendingOrderRiskProcessor.cpp  DefaultPendingOrderRiskProcessor.h  DefaultPositionRiskProcessor.cpp  DefaultPositionRiskProcessor.h  PendingOrderRiskProcessor.h  PositionRiskProcessor.h
Modules/SignalManager/: CMakeLists.txt  DefaultSignalGenerator.h  DefaultSignalManager.cpp  DefaultSignalManager.h  DefaultSignalProcessor.h  SignalContainer.h  SignalGenerator.h  SignalManager.h  SignalProcessor.h
Modules/SignalManager/LevelManager/: DefaultLevelGenerator.cpp  DefaultLevelGenerator.h  DefaultLevelProcessor.cpp  DefaultLevelProcessor.h  LevelGenerator.h  LevelManager.cpp  LevelManager.h  LevelProcessor.h  LevelUtilities.cpp  LevelUtilities.h
Modules/TradeSystem/: CMakeLists.txt  Readme  TestTradeSystem.h  TradeSystem.cpp  TradeSystem.h  TradeSystemBuilder.h  verify_template.cpp
Modules/TradingPlatform/: CMakeLists.txt  ITradingPlatform.h  SierraChartHelpers.h  SierraChartPlatform.h  SingletonTradingPlatform.cpp  SingletonTradingPlatform.h
Modules/Utilities/Calculations/: CMakeLists.txt  Calculations.cpp  Calculations.h  Readme
Modules/Utilities/FileIO/: CMakeLists.txt  FileIO.cpp  FileIO.h  FileIOMessaging.cpp  FileIOMessaging.h
Modules/Utilities/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Modules/Utilities/Networking/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  Messaging.cpp  Messaging.h  Server.cpp  Server.h
Modules/Utilities/Profiling/: CMakeLists.txt  Profiling.cpp  Profiling.h
Modules/Utilities/Queue/: CMakeLists.txt  ThreadSafeQueue.cpp  ThreadSafeQueue.h
Modules/Utilities/Threading/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
Modules/Utilities/Timing/: CMakeLists.txt  Timing.cpp  Timing.h
config/: Readme  backTestParametersFileExample.json  systemConfig.json  tradeSystemParametersGroupExample.json
tests/: CMakeLists.txt  CustomTestLogger.h  main.cpp
tests/BacktestingManager/: BacktestingManagerTest.cpp
tests/CommonTypes/: CommonTypesTest.cpp
tests/ConfigManager/: ConfigManagerTest.cpp
tests/FileIO/: FileIOTest.cpp
tests/HttpRequest/: HttpRequestTest.cpp
tests/Logger/: LoggerTest.cpp
tests/OrderExecutor/: OrderExecutorTest.cpp
tests/OrderManager/: OrderManagerTest.cpp
tests/ParameterManager/: ParameterManagerTest.cpp
tests/RiskManager/: RiskManagerTest.cpp
tests/SignalGenerator/: SignalGeneratorTest.cpp
tests/Timing/: TimingTest.cpp
tests/TradeSystem/: TradeSystemTest.cpp
tests/TradingPlatform/: TradingPlatformTest.cpp
